--- a/pages (old html and work)/page1.html
+++ b/pages (old html and work)/page1.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -11,6 +11,7 @@
 
 <body>
     <header>
+        
         <img src="curtinlogo.png" alt="Curtin Logo" style="float:right; width: 230px; height: 60px;" />
         <h2 style="font-size:20px;">Faculty of Business and Law</h2>
         <h2 style="font-size:20px;">School of Management and Marketing</h2>
@@ -21,19 +22,19 @@
 
         <hr />
 
-        <p class="align1"><b>Unit study package code:</b></p> <p style="text-align: right;"> ISYS3004 </p>
-        <p class="align1"><b>Mode of study:</b></p>
-        <p class="align1"><b>Tuition pattern summary:</b></p>
-        <p class="align1"><b>Credit Value:</b></p>
-        <p class="align1"><b>Pre-requisite units:</b></p>
-        <p class="align1"><b>Co-requisite Units:</b></p>
-        <p class="align1"><b>Anit-requisite units:</b></p>
-        <p class="align1"><b>Result Type:</b></p>
-        <p class="align1"><b>Approved incidental fees:</b></p>
-        <p class="align1"><b>Unit coordinator:</b></p>
-        <p class="align1"><b>Teaching Staff:</b></p>
-        <p class="align1"><b>Administrative contact:</b></p>
-        <p class="align1"><b>Learning Mamangment System:</b></p>
+        <p><b>Unit study package code:</b></p> 
+        <p><b>Mode of study:</b></p>
+        <p><b>Tuition pattern summary:</b></p>
+        <p><b>Credit Value:</b></p>
+        <p><b>Pre-requisite units:</b></p>
+        <p><b>Co-requisite Units:</b></p>
+        <p><b>Anit-requisite units:</b></p>
+        <p><b>Result Type:</b></p>
+        <p><b>Approved incidental fees:</b></p>
+        <p><b>Unit coordinator:</b></p>
+        <p><b>Teaching Staff:</b></p>
+        <p><b>Administrative contact:</b></p>
+        <p><b>Learning Mamangment System:</b></p>
 
         <hr />
         <p><b>Acknowledgement of Country</b></p>
@@ -53,4 +54,4 @@
 
     <script src="js/script.js"></script>
 </body>
-</html>
+</html> -->
