--- a/pages (old html and work)/page10.html
+++ b/pages (old html and work)/page10.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -14,8 +14,9 @@
         <img src="curtinlogo.png" alt="Curtin Logo" style="float:right; width: 230px; height: 60px;" />
         <h2 style="font-size:20px;">Faculty of Business and Law</h2>
         <h2 style="font-size:20px;">School of Management and Marketing</h2>
-      <hr />
-
+        <hr />
+        <h3> Program calendar</h3>
+        <h3> Program calendar - Semester 1 2022</h3>
 
     </header>
 
@@ -25,4 +26,4 @@
 
     <script src="js/script.js"></script>
 </body>
-</html>
+</html> -->
