--- a/pages (old html and work)/page4.html
+++ b/pages (old html and work)/page4.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -14,7 +14,7 @@
         <img src="curtinlogo.png" alt="Curtin Logo" style="float:right; width: 230px; height: 60px;" />
         <h2 style="font-size:20px;">Faculty of Business and Law</h2>
         <h2 style="font-size:20px;">School of Management and Marketing</h2>
-        <hr />
+      <hr />
 
 
     </header>
@@ -25,4 +25,4 @@
 
     <script src="js/script.js"></script>
 </body>
-</html>
+</html> -->
