--- a/pages (old html and work)/page2.html
+++ b/pages (old html and work)/page2.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -72,3 +72,4 @@
     <script src="js/script.js"></script>
 </body>
 </html>
+ -->
