--- a/pages (old html and work)/page3.html
+++ b/pages (old html and work)/page3.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -37,4 +37,4 @@
 
     <script src="js/script.js"></script>
 </body>
-</html>
+</html> -->
