--- a/pages (old html and work)/page6.html
+++ b/pages (old html and work)/page6.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -15,8 +15,7 @@
         <h2 style="font-size:20px;">Faculty of Business and Law</h2>
         <h2 style="font-size:20px;">School of Management and Marketing</h2>
         <hr />
-        <h3> Program calendar</h3>
-        <h3> Program calendar - Semester 1 2022</h3>
+
 
     </header>
 
@@ -26,4 +25,4 @@
 
     <script src="js/script.js"></script>
 </body>
-</html>
+</html> -->
