--- a/pages (old html and work)/page7.html
+++ b/pages (old html and work)/page7.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -94,4 +94,4 @@
 
     <script src="js/script.js"></script>
 </body>
-</html>
+</html> -->
