--- a/pages (old html and work)/page8.html
+++ b/pages (old html and work)/page8.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -65,4 +65,4 @@
     <script src="js/script.js"></script>
 </body>
 </html>
-
+ -->
