fixed issues with w3 validator

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ it is meant to be a single page application, i was able to still use most of it 
         <li><strong><a href="#page8">Information and Communication Technology (ICT) Expectations</a></strong></li>
         <li><strong><a href="#page9">Student Equity</a></strong></li>
         <li><strong><a href="#page10">Program Calendar</a></strong></li>
-        <!-- Needed to create two buttons for theme changing https://www.w3schools.com/tags/tag_button.asp --->
+        <!-- Needed to create two buttons for theme changing https://www.w3schools.com/tags/tag_button.asp-->
         <li><button onclick="doLightMode()" class="theme-button">LIGHT MODE</button></li>
         <li><button onclick="doDarkMode()" class="theme-button dark-mode-button">DARK MODE</button></li>
     </ul>
@@ -267,7 +267,7 @@ it is meant to be a single page application, i was able to still use most of it 
                         appropriate web technologies</td>
                     <!--Had issues with getting the image to be the right size but then found
                     a link to style as https://www.codegrepper.com/code-examples/css/how+to+change+size+of+image+with+css-->
-                    <td class="gradTable" id="gradTable"><img src="images/grad1.PNG" alt="one grad"></td>
+                    <td class="gradTable"><img src="images/grad1.PNG" alt="one grad"></td>
                 </tr>
                 <tr>
                     <td>2</td>
@@ -313,7 +313,7 @@ it is meant to be a single page application, i was able to still use most of it 
             before i learnt how to do tables-->
             <table class="capaTable" id="capaTable">
                 <tr>
-                    <td class="capaTable" id="capaTable"><img src="images/capa1.PNG" alt="Capabilities 1"></td>
+                    <td class="capaTable"><img src="images/capa1.PNG" alt="Capabilities 1"></td>
                     <td>Apply discipline knowledge, principles and concepts</td>
                     <td><img src="images/capa2.PNG" alt="Capabilities 2"></td>
                     <td>Innovative, creative and entrepreneurial</td>
@@ -615,11 +615,11 @@ it is meant to be a single page application, i was able to still use most of it 
             <div class="exten-body">
                 <p><b>Reasonable adjustments for students with disabilities/health circumstances likely to impact on
                     studies</b></p>
-                <p>A<a href="https://www.curtin.edu.au/students/personal-support/disability/cap/" target="_blanke"> Curtin Access Plan (CAP)</a> is a document that outlines the type and level of support required by a student with a
+                <p>A<a href="https://www.curtin.edu.au/students/personal-support/disability/cap/" target="_blank"> Curtin Access Plan (CAP)</a> is a document that outlines the type and level of support required by a student with a
                     disability or health condition to have equitable access to their studies at Curtin. Carers for people with disability
                     may also be eligible for support. This support can include alternative exam or test arrangements, study materials
                     in accessible formats, access to Curtin's facilities and services or other support as discussed with an advisor from
-                    <a href="https://www.curtin.edu.au/students/personal-support/disability/" target="_blanke">AccessAbility Services</a>.
+                    <a href="https://www.curtin.edu.au/students/personal-support/disability/" target="_blank">AccessAbility Services</a>.
                     </p>
                 <br/>
                 <p>It is the responsibility of the student to be available to complete the requirements of a further assessment. If your
