--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
     <meta charset="UTF-8">
     <title>Unit Outline</title>
     <meta name="author" content="Nam Nguyen">
-    <meta name="description" content="Explore flatland and interact with its inhabitants">
+    <meta name="description" content="My First SPA and Website">
     <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <!-- I have made a mistake and though of making different webpages as you saw, to then relise
 it is meant to be a single page application, i was able to still use most of it a rebuild the assignment-->
 
 <body>
-    <!-- The idea of wanthing to make a list area with linking
-        https://www.w3schools.com/html/html_lists.asp as we learnt how to link in the first
+    <!-- Wanting to make a list area with linking
+        https://www.w3schools.com/html/html_lists.asp and we learnt how to link in the first
         and second class -->
     <ul class="left-panel">
         <li><strong><a href="#page1">ISYS3004 Business Web and Mobile Technologies</a></strong></li>
