changes to index

--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
     <meta charset="UTF-8">
     <title>Unit Outline</title>
     <meta name="author" content="Nam Nguyen">
-    <meta name="description" content="My First SPA and Website">
+    <meta name="description" content="Explore flatland and interact with its inhabitants">
     <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <!-- I have made a mistake and though of making different webpages as you saw, to then relise
 it is meant to be a single page application, i was able to still use most of it a rebuild the assignment-->
 
 <body>
-    <!-- Wanting to make a list area with linking
-        https://www.w3schools.com/html/html_lists.asp and we learnt how to link in the first
+    <!-- The idea of wanthing to make a list area with linking
+        https://www.w3schools.com/html/html_lists.asp as we learnt how to link in the first
         and second class -->
     <ul class="left-panel">
         <li><strong><a href="#page1">ISYS3004 Business Web and Mobile Technologies</a></strong></li>
@@ -87,7 +87,7 @@ it is meant to be a single page application, i was able to still use most of it 
                     </div>
                 </div>
                 <div class="first-body">
-                    <p><b>Co-requisite Units:</b></p>
+                    <p><b>Co-requisite units:</b></p>
                     <p>Nil</p>
                 </div>
                 <div class="first-body">
@@ -191,6 +191,7 @@ it is meant to be a single page application, i was able to still use most of it 
             <hr/>
         </div>
         
+        <!--Second Page-->
         <div id="page2" class="page page-intro">
             <div class="header">
                 <div>
@@ -296,7 +297,7 @@ it is meant to be a single page application, i was able to still use most of it 
             </table>
             <hr/>
         </div>
-        
+        <!-- Third Page -->
         <div id="page3" class="page page-learning">
             <div class="header">
                 <div>
@@ -376,6 +377,7 @@ it is meant to be a single page application, i was able to still use most of it 
             </div>
         </div>
 
+        <!--Forth Page-->
         <div id="page4" class="page page-ass">
             <div class="header">
                 <div>
@@ -412,6 +414,7 @@ it is meant to be a single page application, i was able to still use most of it 
                         <td>1</td>
                         <td>Web Fundamentals</td>
                         <td>20%</td>
+                        <!-- Added the extra friday just like the table below-->
                         <td><p><b>Week:</b>Week 7</p><p><b>Day:</b> Friday 15 April, 2022</p><p><b>Time:</b>23:59</p></td>
                         <td>1,3,5</td>
                         <td>Yes</td>
@@ -468,7 +471,7 @@ it is meant to be a single page application, i was able to still use most of it 
                 </div>
             </div>
         </div>
-
+        <!--Fifth Page-->
         <div id="page5" class="page page-moder">
             <div class="header">
                 <div>
@@ -480,6 +483,7 @@ it is meant to be a single page application, i was able to still use most of it 
             <hr/>
             <div  class="mod-body">
                 <p><b>Assessment Moderation</b></p>
+                <br/>
                 <p><b>Fair asessment through moderation</b></p>
                 <p>
                     Moderation describes a quality assurance process to ensure that assessments are appropriate to the learning
@@ -488,6 +492,7 @@ it is meant to be a single page application, i was able to still use most of it 
                     <a href="https://policies.curtin.edu.au/findapolicy/" target="_blank">policies.curtin.edu.au/findapolicy/</a>
                 </p>
             </div>
+            <br/>
             <div class="mod-body">
                 <p><b>Pre-makring moderation</b></p>
             <p>
@@ -547,7 +552,7 @@ it is meant to be a single page application, i was able to still use most of it 
             </div>
 
         </div>
-
+        <!--Sixth Page-->
         <div id="page6" class="page page-exten">
             <div class="header">
                 <div>
@@ -612,6 +617,7 @@ it is meant to be a single page application, i was able to still use most of it 
                 <p>It is the responsibility of the student to be available to complete the requirements of a further assessment. If your
                     results show that you have been granted a further assessment you should immediately check OASIS for details.</p>
             </div>
+            <br/>
             <div class="exten-body">
                 <p><b>Reasonable adjustments for students with disabilities/health circumstances likely to impact on
                     studies</b></p>
@@ -632,7 +638,7 @@ it is meant to be a single page application, i was able to still use most of it 
             <hr/>
 
         </div>
-
+        <!--Seventh Page-->
         <div id="page7" class="page page-refer">
             <div class="header">
                 <div>
@@ -705,7 +711,7 @@ it is meant to be a single page application, i was able to still use most of it 
          <hr/>
 
         </div>
-
+        <!--8th Page-->
         <div id="page8" class="page page-ICT">
             <div class="header">
                 <div>
@@ -794,7 +800,7 @@ it is meant to be a single page application, i was able to still use most of it 
             </div>
             <hr/>
         </div>
-
+        <!--Ninth Page-->
         <div id="page9"  class="page page-stu">
             <div class="header">
                 <div>
@@ -814,7 +820,7 @@ it is meant to be a single page application, i was able to still use most of it 
                 important to note that the staff of the University may not be able to meet your needs if they are not informed of
                 your individual circumstances, so please get in touch with the appropriate service if you require assistance.</p>
                 <br/>
-            <p>To discuss your needs in relatio to:</p>
+            <p>To discuss your needs in relation to:</p>
             <br/>
             <ul>
                 <li>
@@ -861,7 +867,7 @@ it is meant to be a single page application, i was able to still use most of it 
             </ul>
             <hr/>
         </div>
-
+        <!--Tenth Page-->
         <div id="page10" class="page page-calendar">
             <div class="header">
                 <div>
